# genesis

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  codecov.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  setup.py  setup_dirs.py
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
benchmarks/: README.md  __init__.py  run_benchmarks.py
deployment/: README.md
deployment/helm/genesis/: Chart.yaml  values.yaml
docs/: FEATURES.md  changelog.md  contributing.md  index.md  installation.md  quickstart.md
docs/adr/: 0001-sklearn-style-fit-generate-api.md  0002-multi-backend-deep-learning-support.md  0003-optional-dependencies-via-extras.md  0004-rejection-sampling-conditional-generation.md  0005-dataclass-based-configuration.md  0006-privacy-first-class-concern.md  0007-gaussian-copula-fallback-generator.md  0008-statistic-aggregation-federated-learning.md  0009-layered-evaluation-architecture.md  0010-rest-api-optional-deployment.md  0011-plugin-architecture-decorator-registration.md  0012-pandas-primary-data-interchange.md  0013-blockchain-style-lineage-tracking.md  0014-streaming-generation-kafka-websocket.md  0015-automl-method-selection-meta-features.md  0016-domain-specific-generators.md  0017-git-like-dataset-versioning.md  0018-compliance-certificates-first-class.md  0019-constraint-system-post-generation.md  0020-cli-thin-wrapper-over-sdk.md  README.md
docs/api/: reference.md  v120_features.md  v130_features.md  v140_features.md
docs/architecture/: ARCHITECTURE.md  README.md  overview.md  v130_features.md  v140_features.md
docs/architecture/decisions/: 001-framework-agnostic-backends.md  002-sklearn-style-api.md  003-constraint-system.md  004-privacy-by-design.md
docs/examples/: index.md
docs/user_guide/: augmentation.md  automl.md  conditional_generation.md  connectors.md  dashboard.md  delta.md  domains.md  drift.md  evaluation.md  explainability.md  fairness.md  federated.md  gpu.md  lineage.md  llm_inference.md  migration.md  observability.md  pipeline.md  privacy.md  privacy_attacks.md  saas.md  sla.md  streaming.md  tabular.md  text.md  timeseries.md  versioning.md  zero_shot.md
examples/: 01_quickstart.ipynb  02_tabular_synthesis.ipynb  03_time_series.ipynb  04_text_generation.ipynb  05_privacy_config.ipynb  06_healthcare_example.ipynb  07_finance_example.ipynb  08_multitable_example.ipynb  README.md
genesis/: __init__.py  anomaly.py  api.py  augmentation.py  automl.py  benchmarking.py  causality.py  cdc.py  cicd.py  cloud_deploy.py  compliance.py  compliance_as_code.py  connectors.py  crossmodal.py  dashboard.py  debugger.py  delta.py  discovery.py  distributed.py  domains.py  dp_compiler.py  drift.py  edge_generation.py  explainability.py  fairness.py  federated.py  federated_marketplace.py  gpu.py  graph.py  lakehouse.py  leaderboard.py  lineage.py  llm_finetuning.py  llm_inference.py  marketplace.py  marketplace_v2.py  model_hub.py  monitoring.py  multimodal.py  observability.py  (+18 more)
genesis/agents/: __init__.py  agentic.py  parser.py  prompts.py  synthetic_agent.py
genesis/analyzers/: __init__.py  privacy.py  relationships.py  schema.py  statistics.py
genesis/api/: __init__.py  schemas.py  server.py
genesis/backends/: __init__.py
genesis/backends/pytorch/: __init__.py  networks.py  training.py
genesis/backends/tensorflow/: __init__.py  networks.py  training.py
genesis/cli/: __init__.py  main.py
genesis/core/: __init__.py  base.py  config.py  constraints.py  exceptions.py  mixins.py  types.py
genesis/evaluation/: __init__.py  evaluator.py  ml_utility.py  privacy.py  report.py  statistical.py
genesis/generators/: __init__.py  auto.py
genesis/integrations/: __init__.py  mlflow_integration.py  wandb_integration.py
genesis/io/: __init__.py  csv_io.py  database.py  pandas_io.py
genesis/multitable/: __init__.py  constraints.py  generator.py  schema.py
genesis/pipeline/: __init__.py  builder.py  executor.py  nodes.py  pipeline.py
genesis/privacy/: __init__.py  anonymity.py  config.py  differential.py  metrics.py
genesis/streaming/: __init__.py  config.py  generator.py  kafka.py  production.py  websocket.py
genesis/testing/: __init__.py  fixtures.py  generators.py  orm.py  plugin.py  schemas.py
genesis/utils/: __init__.py  logging.py  preprocessing.py  serialization.py  transformers.py  validation.py
tests/: __init__.py  conftest.py  test_properties.py
tests/integration/: test_end_to_end.py
tests/unit/: test_agentic.py  test_agents.py  test_analyzers.py  test_augmentation.py  test_automl.py  test_benchmarking.py  test_causality.py  test_compliance_as_code.py  test_conditional.py  test_connectors.py  test_core.py  test_dashboard.py  test_delta.py  test_domains.py  test_drift.py  test_edge_generation.py  test_evaluation.py  test_explainability.py  test_fairness.py  test_federated.py  test_integrations.py  test_lineage.py  test_observability.py  test_pipeline.py  test_privacy.py  test_saas.py  test_sla.py  test_streaming.py  test_utils.py  test_v120_features.py  test_versioning.py  test_zero_shot.py
website/: docusaurus.config.new.ts  docusaurus.config.ts  package-lock.json  sidebars.ts
website/docs/: benchmarks.md  changelog.md  contributing.md  examples.md  faq.md  index.md  troubleshooting.md  why-genesis.md
(+83 files in other folders)
