[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis-synth"
version = "1.5.0"
description = "A comprehensive synthetic data generation platform for ML training, testing, and development"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Genesis Team", email = "hello@genesis-synth.io"}
]
keywords = [
    "synthetic-data",
    "machine-learning",
    "data-generation",
    "privacy",
    "differential-privacy",
    "ctgan",
    "tvae",
    "timegan"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.21.0,<3.0.0",
    "pandas>=1.3.0,<3.0.0",
    "scipy>=1.7.0,<2.0.0",
    "scikit-learn>=1.0.0,<2.0.0",
    "tqdm>=4.62.0,<5.0.0",
    "pyyaml>=6.0,<7.0",
    "click>=8.0.0,<9.0.0",
    "rich>=12.0.0,<14.0.0",
]

[project.optional-dependencies]
pytorch = [
    "torch>=1.9.0,<3.0.0",
]
tensorflow = [
    "tensorflow>=2.6.0,<3.0.0",
]
llm = [
    "openai>=1.0.0,<2.0.0",
    "transformers>=4.20.0,<5.0.0",
    "tokenizers>=0.13.0,<1.0.0",
]
viz = [
    "matplotlib>=3.4.0,<4.0.0",
    "plotly>=5.0.0,<6.0.0",
]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=3.0.0,<6.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-xdist>=3.0.0,<4.0.0",
    "hypothesis>=6.0.0,<7.0.0",
    "black>=22.0.0,<25.0.0",
    "isort>=5.10.0,<6.0.0",
    "mypy>=0.950,<2.0.0",
    "ruff>=0.0.250,<1.0.0",
    "pre-commit>=2.20.0,<5.0.0",
]
docs = [
    "mkdocs>=1.4.0,<2.0.0",
    "mkdocs-material>=8.5.0,<10.0.0",
    "mkdocstrings[python]>=0.19.0,<1.0.0",
]
api = [
    "fastapi>=0.100.0,<1.0.0",
    "uvicorn>=0.22.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
]
image = [
    "diffusers>=0.20.0,<1.0.0",
    "Pillow>=9.0.0,<11.0.0",
]
integrations = [
    "mlflow>=2.0.0,<3.0.0",
    "wandb>=0.15.0,<1.0.0",
]
tuning = [
    "optuna>=3.0.0,<4.0.0",
]
distributed = [
    "ray>=2.0.0,<3.0.0",
    "dask>=2023.1.0,<2026.0.0",
    "dask-distributed>=2023.1.0,<2026.0.0",
]
streaming = [
    "kafka-python>=2.0.0,<3.0.0",
    "websockets>=10.0,<14.0",
    "fastavro>=1.7.0,<2.0.0",
]
reporting = [
    "weasyprint>=57.0,<62.0",
]
connectors = [
    "snowflake-connector-python>=3.0.0,<4.0.0",
    "google-cloud-bigquery>=3.0.0,<4.0.0",
    "databricks-sql-connector>=2.0.0,<4.0.0",
]
observability = [
    "opentelemetry-api>=1.15.0,<2.0.0",
    "opentelemetry-sdk>=1.15.0,<2.0.0",
    "opentelemetry-exporter-otlp>=1.15.0,<2.0.0",
]
fairness = [
    "aif360>=0.5.0,<1.0.0",
]
all = [
    "genesis-synth[pytorch,tensorflow,llm,viz,api,image,integrations,tuning,distributed,streaming,reporting,connectors,observability,fairness,dev,docs]",
]

[project.scripts]
genesis = "genesis.cli.main:main"

[project.urls]
Homepage = "https://github.com/genesis-synth/genesis"
Documentation = "https://genesis-synth.github.io/genesis"
Repository = "https://github.com/genesis-synth/genesis"
Issues = "https://github.com/genesis-synth/genesis/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["genesis*"]

[tool.setuptools.package-data]
genesis = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["genesis"]
skip_gitignore = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "gpu: marks tests requiring GPU",
]

[tool.coverage.run]
source = ["genesis"]
branch = true
omit = [
    "genesis/cli/*",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
